# python-intro

./: .gitignore  Link do repozytorium github.txt  README.md
zadanie_1/: zadanie_1.py
zadanie_2/: app.py  test_app.py
zadanie_3/: .gitignore  LICENSE  README.md  pyproject.toml
zadanie_3/pyhelpers/: __init__.py  data_utils.py  math_tools.py  text_utils.py
zadanie_3/tests/: test_data_utils.py  test_math_tools.py  test_text_utils.py
zadanie_4/: RAPORT.md  lab_pymcdm.py  smartphones.csv
zadanie_5/: LICENSE  RAPORT.md  requirements.txt
zadanie_5/examples/: create_form_pdf.py  create_invoice_pdf.py  read_invoice.py
